Add further warning that this is a fake.

--- a/index.html
+++ b/index.html
@@ -343,6 +343,11 @@ function keepAlive() {	var myAjax = new Request({method: "get", url: "index.php"
 <p>
 	&nbsp;</p>
 <p>
+<p style="text-align: justify;">
+	Vous êtes encore ici?  Peut-être avez vous remarqué que ce site est un faux?  Êtes-vous tombé pour l'arnaque?</p>
+<p>
+	&nbsp;</p>
+<p>
 	&nbsp;</p>
 <div id="ckimgrsz" style="left: 8px; top: 8px;">
 	<div class="preview">
@@ -423,7 +428,7 @@ function keepAlive() {	var myAjax = new Request({method: "get", url: "index.php"
     	<div class="clear"></div>
 	<div class="rt-block">
 		<a href="http://www.rockettheme.com/" title="rockettheme.com" id="rocket"></a>
-		Création de Alexandre F. cloné par Antoine G.	</div>
+		Création de <a href="http://www.aidonsdenispoitras.org/">Alexandre F.</a> cloné par <a href="https://github.com/aybabtme/fake_donation">Antoine G.</a>	</div>
 
 </div>
 <div class="rt-grid-2 rt-omega">
