Add warning that 'official' website is not more trust worthy than mine.

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ function keepAlive() {	var myAjax = new Request({method: "get", url: "index.php"
 	&nbsp;</p>
 <p>
 <p style="text-align: justify;">
-	Vous êtes encore ici?  Peut-être avez vous remarqué que ce site est un faux?  Êtes-vous tombé pour l'arnaque?</p>
+	Vous êtes encore ici?  Peut-être avez vous remarqué que ce site est un faux?  Êtes-vous tombé pour l'arnaque?  Le 'vrai' site web se trouve <a href="http://aidonsdenispoitras.org/">ici</a>.  Mais tant qu'à moi, il est aussi peu réputable.</p>
 <p>
 	&nbsp;</p>
 <p>
