--- a/index.html
+++ b/index.html
@@ -325,7 +325,8 @@ function keepAlive() {	var myAjax = new Request({method: "get", url: "index.php"
 		</dd>
  	</dl>
 <div class="angled">
-	<object height="360" width="640"><param name="movie" value="//youtu.be/sKYKW4lwEyY?hl=fr_FR&amp;version=3" /><param name="allowFullScreen" value="true" /><param name="allowscriptaccess" value="always" /><embed allowfullscreen="true" allowscriptaccess="always" height="360" src="www.youtube.com/watch?v=sKYKW4lwEyY?hl=fr_FR&amp;version=3" type="application/x-shockwave-flash" width="640"></embed></object></div>
+	<object width="640" height="360"><param name="movie" value="//www.youtube.com/v/sKYKW4lwEyY?version=3&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/sKYKW4lwEyY?version=3&amp;hl=en_US" type="application/x-shockwave-flash" width="640" height="360" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+</div>
 <p>
 	&nbsp;</p>
 <div class="clear">
